<resources>
    <string name="app_name">Chill Bidding</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="emailAddress">Email Address</string>
    <string name="usernameOrEmailAddressTaken">Username or Email Address is Already Taken</string>
    <string name="confirmSignOut">Do you really want to sign out?</string>
    <string name="settings">Settings</string>
    <string name="nearby">Nearby</string>
    <string name="search">Search</string>
    <string name="history">History</string>
    <string name="general">General</string>
    <string name="addTask">Add Task</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="taskPosted">Task Posted</string>
    <string name="taskProvided">Task Provided</string>
    <string name="viewDetails">View Details</string>
    <string name="editTask">Edit</string>
    <string name="deleteTask">Delete</string>
    <string name="bidTask">Bid</string>
    <string name="bids">Bids</string>
    <string name="bid">Bid</string>
    <string name="price">Price</string>
    <string name="submitBid">Submit Bid</string>
    <string name="keywords">Keywords</string>
    <string name="searchKeywords">Search Keywords</string>
    <string name="Accept">Accept Bid</string>
    <string name="Decline">Decline Bid</string>
    <string name="Notification">Notification</string>
    <string name="requestGPSPermission">Please grant GPS permission to the app.</string>
    <string name="requestGPSEnable">Please make sure GPS is turned on.</string>
    <string name="waitForLocation">Searching for GPS. Please wait&#8230;</string>
    <string name="pickLocation">Pick Location</string>
    <string name="searchLocation">Search Location</string>
    <string name="noLocationSelected">No Location Selected</string>
    <string name="currentLocationNeedPermission">Location Permission is required to find current location.</string>
    <string name="currentLocation">Current Location</string>
    <string name="removeLocation">Remove Location</string>
    <string name="confirmRemoveLocation">Do you really want to remove location?</string>
    <string name="setDone">Set Done</string>
    <string name="setNotDone">Set Not Done</string>
    <string name="updateProfile">Update Profile</string>
    <string name="editProfile">Edit Profile</string>
    <string name="userProfile">User Profile</string>
    <string name="credits">Credits</string>
    <string name="mapDataAndSearch">Map Data &amp; Search</string>
    <string name="openStreetMapCopyright">© OpenStreetMap contributors</string>
    <string name="acceptedBid">Accepted Bid</string>

    <string-array name="taskStatusArray">
        <item>Requested</item>
        <item>Bidded</item>
        <item>Assigned</item>
        <item>Completed</item>
    </string-array>

    <string-array name="taskProvidedStatusArray">
        <item>Bidded</item>
        <item>Assigned</item>
        <item>Completed</item>
    </string-array>
</resources>

